[EATON-566] Fix - Text - Statement and Image list too close to each other when placed in two column grid.

--- a/eaton.frontend/src/components/text/css/views/_view-statement.scss
+++ b/eaton.frontend/src/components/text/css/views/_view-statement.scss
@@ -6,7 +6,7 @@
   &__content {
     padding: 15px 0 15px 30px;
     border-left: 10px solid $color__primary-blue;
-    font-family: Arial;
+    font-family: $font-family__secondary;
     font-style: italic;
     color: $color__primary-gray3;
     margin: 0;
@@ -29,6 +29,9 @@
     &__content {
       font-size: 3.4rem;
       line-height: 5rem;
+
+      // EATON-566: Fix - Text - Statement and Image list too close to each other when placed in two column grid.
+      max-width: 460px;
     }
   }
 }
